app-in-apps/yaml/examplenginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx-service
  namespace: nginx
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: simple-nginx
  type: ClusterIP
